--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   country_flags: ^2.2.0
   pinput: ^4.0.0
+  firebase_core: ^3.0.0
+  firebase_auth: ^5.0.0
+  cloud_firestore: ^5.0.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
