--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   mobile_scanner: ^5.1.1
   image_picker: ^1.1.2
   qr_flutter: ^4.1.0
+  firebase_storage: ^12.0.1
 
 dev_dependencies:
   flutter_test:
