--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^1.0.0
-
+  phone_number: ^0.9.0
+  shared_preferences: ^2.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
