--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,8 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"ulet-a6713","appId":"1:602858478206:android:0dc2d466a07996fa6b162f","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"ulet-a6713","configurations":{"android":"1:602858478206:android:0dc2d466a07996fa6b162f"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": { "default": { "projectId": "ulet-a6713", "appId": "1:602858478206:android:0dc2d466a07996fa6b162f", "fileOutput": "android/app/google-services.json" } },
+      "dart": { "lib/firebase_options.dart": { "projectId": "ulet-a6713", "configurations": { "android": "1:602858478206:android:0dc2d466a07996fa6b162f" } } }
+    }
+  }
+}
